fix: change spacing on mobile chat

--- a/src/App.css
+++ b/src/App.css
@@ -197,7 +197,7 @@ button {
 }
 .dot-flashing::before,
 .dot-flashing::after {
-  content: '';
+  content: "";
   display: inline-block;
   position: absolute;
   top: 0;
@@ -886,7 +886,8 @@ a {
   }
 
   .globe-state-box button,
-  .globe-state-box p {
+  .globe-state-box p,
+  .chat-input-box__item {
     font-size: 16px;
   }
 
@@ -900,6 +901,10 @@ a {
 
   .chat-wrapper {
     min-width: auto;
+  }
+
+  .chat-content {
+    padding: 0 15px;
   }
 
   .modal-wrapper {
